Set production site URL

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://productivitytechnotes.netlify.app/
+url: https://productivitytechnotes.com
 baseurl: ""
 
 title: Productivity Tech Notes
